# gensphere-demo

./: .gitignore
example_agents/job_researcher/: README.md  agent_card.yml  api.py  gen_pod.py  node_card.yml  pyproject.toml  report.md  requirements.txt
example_agents/job_researcher/src/job_researcher/: crew.py  main.py
gen-cli/: README.md  requirements.txt  setup.py
gen-cli/src/gen_cli/: __init__.py  build.py  deploy.py  list.py  main.py  setup.py  utils.py
gen-cli/src/gen_cli/templates/: Dockerfile.template
gen-flow-sdk/: README.md  setup.py
gen-platform/: docker-compose.yml  nginx.txt
gen-platform/api/: Dockerfile  api_service.py
gen-platform/api/agents/: Dockerfile  agents.py  requirements.txt
gen-platform/api/job_executor/: Dockerfile  job_executor.py  requirements.txt
gen-platform/api/jobs/: Dockerfile  jobs.py  requirements.txt
gen-platform/api/node_card/: Dockerfile  node_card.py  requirements.txt
gen-platform/app/: Dockerfile  Home.py  requirements.txt
gen-platform/app/.streamlit/: config.toml
gen-platform/app/ai_agent/: ai_agents.py  create_agent.py
gen-platform/app/docs/: getting_started.py
gen-platform/app/node_management/: create_node.py  node_agents.py  node_status.py
gen-platform/app/pages/: 01_AI_Agent_Hub.py  01_Agent_Repository.py  02_How_To_Guide.py
gen-platform/app/utils/: __init__.py  api.py  registry_client.py
gen-pod-sdk/: README.md  requirements.txt  setup.py
gen-pod-sdk/src/gen_pod_sdk/: __init__.py  crewai_wrapper.py  pod_generator.py
registry/: docker-compose.yml
(+5 files in other folders)
