[tool.poetry]
name = "job_researcher"
version = "0.1.0"
description = "job_researcher using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.63.6,<1.0.0" }


[tool.poetry.scripts]
job_researcher = "job_researcher.main:run"
run_crew = "job_researcher.main:run"
train = "job_researcher.main:train"
replay = "job_researcher.main:replay"
test = "job_researcher.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
